--- a/member/index.html
+++ b/member/index.html
@@ -112,16 +112,16 @@
             <div class="row member-info">
     <div class="col-md-3">
         <a href="http://mmvg.org/member/member1/">
-            <div class="small-portrait" itemprop="image" style="background-image: url('http://mmvg.org//img//portraits/portrait.jpg');"></div>
+            <div class="small-portrait" itemprop="image" style="background-image: url('http://mmvg.org//img//portraits/Xiaojun.jpg');"></div>
         </a>
         <div class="portrait-title">
-            <h3 itemprop="name"><a href="http://mmvg.org/member/member1/">Member Member</a></h3>
+            <h3 itemprop="name"><a href="http://mmvg.org/member/member1/">Xiaojun Chang</a></h3>
         </div>
     </div>
 
     <div class="col-md-9">
         
-            <h4>Full Professor, Harvard University</h4>
+            <h4>DECRA FELLOW, Lecturer, Monash University</h4>
             
         My short bio. I am Member Member.
     </div>
