--- a/index.html
+++ b/index.html
@@ -440,12 +440,12 @@
                         <div class="col-xs-12 col-md-3">
         <div id="profile">
             <a href="http://mmvg.org/member/member1/">
-                <div class="portrait" itemprop="image" style="background-image: url('http://mmvg.org//img//portraits/portrait.jpg');"></div>
+                <div class="portrait" itemprop="image" style="background-image: url('http://mmvg.org//img//portraits/Xiaojun.jpg');"></div>
             </a>
             <div class="portrait-title">
-                <h2 itemprop="name"><a href="http://mmvg.org/member/member1/">Member Member</a></h2>
+                <h2 itemprop="name"><a href="http://mmvg.org/member/member1/">Xiaojun Chang</a></h2>
                 
-                    <h4>Full Professor, Harvard University</h4>
+                    <h4>DECRA FELLOW, Lecturer, Monash University</h4>
                 
             </div>
         </div>
