--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <div class="portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/Xiaojun.jpg');"></div>
             </a>
             <div class="portrait-title">
-                <h2 itemprop="name"><a href="http://www.mmvg.org/member/member1/">Member Member</a></h2>
+                <h2 itemprop="name"><a href="http://www.mmvg.org/member/member1/">Xiaojun Chang</a></h2>
                 
                     <h4>Lecturer, Monash University</h4>
                 
