--- a/member/index.html
+++ b/member/index.html
@@ -159,7 +159,7 @@
             <div class="small-portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/Xiaojun.jpg');"></div>
         </a>
         <div class="portrait-title">
-            <h3 itemprop="name"><a href="http://www.mmvg.org/member/member1/">Member Member</a></h3>
+            <h3 itemprop="name"><a href="http://www.mmvg.org/member/member1/">Xiaojun Chang</a></h3>
         </div>
     </div>
 
