--- a/member/index.html
+++ b/member/index.html
@@ -134,7 +134,7 @@
             <div class="row member-info">
     <div class="col-md-3">
         <a href="http://www.mmvg.org/member/changlin_li/">
-            <div class="small-portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/portraits');"></div>
+            <div class="small-portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/Changlin_Li.jpg');"></div>
         </a>
         <div class="portrait-title">
             <h3 itemprop="name"><a href="http://www.mmvg.org/member/changlin_li/">Changlin Li</a></h3>
