--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         <div class="col-xs-12 col-md-3">
         <div id="profile">
             <a href="http://www.mmvg.org/member/changlin_li/">
-                <div class="portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/portraits');"></div>
+                <div class="portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/Changlin_Li.jpg');"></div>
             </a>
             <div class="portrait-title">
                 <h2 itemprop="name"><a href="http://www.mmvg.org/member/changlin_li/">Changlin Li</a></h2>
