--- a/member/changlin_li/index.html
+++ b/member/changlin_li/index.html
@@ -110,7 +110,7 @@
     <div class="col-xs-12 col-md-4">
         <div id="profile">
 
-            <div class="portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/portraits');"></div>
+            <div class="portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/Changlin_Li.jpg');"></div>
 
             <div class="portrait-title">
                 <h2 itemprop="name">Changlin Li</h2>
