--- a/grants/index.html
+++ b/grants/index.html
@@ -35,7 +35,7 @@
 
 
     <link rel="shortcut icon" href="http://www.mmvg.org//img/favicon.ico" type="image/x-icon">
-    <link rel="canonical" href="http://www.mmvg.org/funding/">
+    <link rel="canonical" href="http://www.mmvg.org/grants/">
 
     <title> | Monash Machine Vision Group</title>
 
@@ -108,56 +108,13 @@
 <div class="container">
     
 
-<h1 id="et-malis-vellet-tellus-deseruere-in-credant">Et malis vellet tellus deseruere in credant</h1>
+<h1 id="grants">Grants</h1>
 
-<h2 id="inde-sidera-moenia-lacertis-nomen-nostra-membra">Inde sidera moenia lacertis nomen nostra membra</h2>
+<h2 id="towards-data-efficient-future-action-prediction-in-the-wild">Towards Data-Efficient Future Action Prediction in the Wild</h2>
 
-<p>Lorem markdownum miranti. Sonus faciunt omnibus frustra: illa possem ad regio
-Anubis tamen. Sustulerat debent fluviis herbis attollere rogus et formae
-nitentem avellere motis clipeus Achilles felix videam undas. <em>Posuit haec ipse</em>
-posse.</p>
+<p>Australian Research Council Discovery Early Career Researcher Award (DE190100626)</p>
 
-<p>Ore fame mons Olympi tantae <em>stringit</em> columbas proxima habebat, longius alta
-non. Haeserat gerunt detinuit genis est huc, dixit tam dumque nitidum.</p>
-
-<ol>
-<li>Cristata causam Triones moenia habentem subito utentem</li>
-<li>Astraea castris contentus nisi leve eum invia</li>
-<li>Inferiusque capta cognoscenda flaventi locuta notavi fallere</li>
-<li>Moriens scripsi ictus tuo cum</li>
-</ol>
-
-<p>Tarpeias insurgens summo sinistra vertice, in neve utroque exempla Cyparissus
-tanta tecti terras. Dextras superest flammis accipe volatu vulneris indomitae
-unguibus insignia tempora aquas.</p>
-
-<h2 id="eripienda-gerebam-primus-at-tibi-laudisque-vulnifico">Eripienda gerebam primus at tibi laudisque vulnifico</h2>
-
-<p>Spes obliquo, Pagasaeae vel deriguere ausorum adest sex Sibyllae. Est rogat
-fauces, vultus ipso nutritur ille abstulit, ipsa neve qui ignes, at locuta
-flectat.</p>
-
-<ol>
-<li>Nomine nec</li>
-<li>Poterat tergo exemplis per locus</li>
-<li>Tu haec minimum mentem aut ne paulum</li>
-<li>Pandos nepotum in instar sua soror ossibus</li>
-<li>Tegemus nec librata Chaoque</li>
-<li>Apes sua serpunt vellera vestigia at terram</li>
-</ol>
-
-<p><a href="http://laudatos.net/times">Me illa</a> latratibus mitis consternantur urnisque, et
-et modo. Pedicis perfide.</p>
-
-<p>Me quot, attonitum ordine regunt, positaeque; atque saeve adsuetaque, o! Regnat
-haerent, <a href="http://dixerunt.net/">non membris lumina</a> viridi quem mecum limine
-illic mihi iunxit, non conviva: quae quinquennem.</p>
-
-<p>Virgo nostraque in inde seque est prolem, subiere me necopina que <a href="http://evincitqueilla.org/ponderaille.html">amplexibus
-vidit</a> perpetiar nocendi corpore
-Nonacria aequora sensu. Silvas <a href="http://www.terribilis-quoque.net/sive.php">fortibus
-iacui</a> ultima eligit ut mea errant,
-tibi ille nubes; muneris si silva, erat.</p>
+<p>Sole Investigator, 2019-2021</p>
 
 </div>
 
