--- a/grants/index.html
+++ b/grants/index.html
@@ -116,6 +116,20 @@
 
 <p>Sole Investigator, 2019-2021</p>
 
+<h2 id="learning-to-learn-and-adapt-with-less-labels">Learning to Learn and Adapt with Less Labels</h2>
+
+<p>Defense Advanced Research Projects Agency</p>
+
+<p>Chief Investigator, 2019-2021</p>
+
+<h2 id="knowledge-driven-deep-learning-for-predicting-the-patients-length-of-stay">Knowledge-driven Deep Learning for predicting the patients’ length of stay</h2>
+
+<p>Joint Industry Partners from Cabrini Health and Eastern Health Hospital</p>
+
+<h2 id="identification-of-point-of-sale-insights-by-mining-social-media">Identification of Point of Sale Insights by Mining Social Media</h2>
+
+<p>Patties Foods</p>
+
 </div>
 
 <footer class="site-footer">
