--- a/grants/index.html
+++ b/grants/index.html
@@ -110,23 +110,23 @@
 
 <h1 id="grants">Grants</h1>
 
-<h2 id="towards-data-efficient-future-action-prediction-in-the-wild">Towards Data-Efficient Future Action Prediction in the Wild</h2>
+<h2 id="1-towards-data-efficient-future-action-prediction-in-the-wild">1. Towards Data-Efficient Future Action Prediction in the Wild</h2>
 
 <p>Australian Research Council Discovery Early Career Researcher Award (DE190100626)</p>
 
 <p>Sole Investigator, 2019-2021</p>
 
-<h2 id="learning-to-learn-and-adapt-with-less-labels">Learning to Learn and Adapt with Less Labels</h2>
+<h2 id="2-learning-to-learn-and-adapt-with-less-labels">2. Learning to Learn and Adapt with Less Labels</h2>
 
 <p>Defense Advanced Research Projects Agency</p>
 
 <p>Chief Investigator, 2019-2021</p>
 
-<h2 id="knowledge-driven-deep-learning-for-predicting-the-patients-length-of-stay">Knowledge-driven Deep Learning for predicting the patients’ length of stay</h2>
+<h2 id="3-knowledge-driven-deep-learning-for-predicting-the-patients-length-of-stay">3. Knowledge-driven Deep Learning for predicting the patients’ length of stay</h2>
 
 <p>Joint Industry Partners from Cabrini Health and Eastern Health Hospital</p>
 
-<h2 id="identification-of-point-of-sale-insights-by-mining-social-media">Identification of Point of Sale Insights by Mining Social Media</h2>
+<h2 id="4-identification-of-point-of-sale-insights-by-mining-social-media">4. Identification of Point of Sale Insights by Mining Social Media</h2>
 
 <p>Patties Foods</p>
 
@@ -137,8 +137,6 @@
         <p class="powered-by">
 
             &copy; Monash Machine Vision Group, 2019 &middot; 
-
-            Partially powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
 
             <span class="pull-right"><a href="#home" id="back_to_top"><span class="button_icon"><i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i></span></a></span>
 
