--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     
                     <div class="col-xs-12 col-md-4">
                         <h3>About The Faculty</h3>
-                        <p class="slogan-column">IT underpins everything. So it’s no surprise that Monash has dedicated a whole faculty just to teaching and learning IT. In fact, we’re the only university in the prestigious Group of Eight that has. So you can be sure that, for us, IT isn’t just a side interest – it’s what we do.</p>
+                        <p class="slogan-column">IT underpins everything. So it’s no surprise that Monash has dedicated a whole faculty just to teaching and learning IT. In fact, we’re the only university in the prestigious Group of Eight that has. So you can be sure that, for us, IT isn’t just a side interest – it’s what we do. Our Data Science &amp; AI Group is unlocking the potential of large data sets across a wide range of applications. Our work is facilitating better health outcomes for elderly members of the community and helping businesses make more informed decisions for the future. Our cross-disciplinary approach to problem-solving means we work collaboratively with some of the world’s leading data scientists and external partners, ensuring we have the capabilities to deliver answers.</p>
                     </div>
                     
                     <div class="col-xs-12 col-md-4">
