--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     
                     <div class="col-xs-12 col-md-4">
                         <h3>About The University</h3>
-                        <p class="slogan-column">Monash is a member of Australia&rsquo;s Group of Eight, a coalition of Australia&rsquo;s eight leading research Universities, a member of the ASAIHL, and is the only Australian member of the M8 Alliance of Academic Health Centers, Universities and National Academies. Monash is one of two Australian universities to be ranked in the École des Mines de Paris (Mines ParisTech) ranking on the basis of the number of alumni listed among CEOs in the 500 largest worldwide companies.</p>
+                        <p class="slogan-column">Monash University is a public research university based in Melbourne, Australia. Founded in 1958, it is the second oldest university in the State of Victoria. Monash is a member of Australia&rsquo;s Group of Eight, a coalition of Australia&rsquo;s eight leading research Universities, a member of the ASAIHL, and is the only Australian member of the M8 Alliance of Academic Health Centers, Universities and National Academies. Monash is one of two Australian universities to be ranked in the École des Mines de Paris (Mines ParisTech) ranking on the basis of the number of alumni listed among CEOs in the 500 largest worldwide companies.</p>
                     </div>
                     
                 </div>
