--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div class="portrait-title">
                 <h2 itemprop="name"><a href="http://www.mmvg.org/member/di_yuan/">Di Yuan</a></h2>
                 
-                    <h4>PhD Student, Xian Jiaotong University</h4>
+                    <h4>PhD Student, Harbin Institute of Technology</h4>
                 
             </div>
         </div>
