--- a/member/fengda_zhu/index.html
+++ b/member/fengda_zhu/index.html
@@ -200,10 +200,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <h3>Biography</h3>
-                 <div class="article-style"><p>Greetings! I am a faculty member at Faculty of Information Technology, Monash University Clayton Campus, Australia. I am also affiliated with Monash University Centre for Data Science. I am ARC Discovery Early Career Researcher Award (DECRA) Fellow between 2019-2021 (awarded in 2018). I am actively looking for talented and motivated PhD students to work with me. Please drop me an email if you are interested.</p>
-
-<p>Before joining Monash, I was a Postdoc Research Associate in School of Computer Science, Carnegie Mellon University, working with Prof. Alex Hauptmann. I have spent most of my time working on exploring multiple signals (visual, acoustic, textual) for automatic content analysis in unconstrained or surveillence videos. Our system has achieved top performance in various international competitions, such as TRECVID MED, TRECVID SIN, and TRECVID AVS. I received my Ph.D. degree in Centre for Artificial Intelligence &amp; Faculty of Engineering and Information Technology, University of Technology Sydney.</p>
-</div>
+                 <div class="article-style"></div>
             </div>
         </div>
 
