--- a/member/index.html
+++ b/member/index.html
@@ -241,7 +241,7 @@
 
     <div class="col-md-9">
         
-            <h4>PhD Student, Xian Jiaotong University</h4>
+            <h4>PhD Student, Harbin Institute of Technology</h4>
             
         My short bio. I am Member Member.
     </div>
