--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         <div class="col-xs-12 col-md-3">
         <div id="profile">
             <a href="http://www.mmvg.org/member/mengyuan_ma/">
-                <div class="portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/Mengyuan_Ma.jpg');"></div>
+                <div class="portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/Mengyuan_Ma.jpeg');"></div>
             </a>
             <div class="portrait-title">
                 <h2 itemprop="name"><a href="http://www.mmvg.org/member/mengyuan_ma/">Mengyuan Ma</a></h2>
