--- a/member/index.html
+++ b/member/index.html
@@ -144,7 +144,7 @@
             <div class="row member-info">
     <div class="col-md-3">
         <a href="http://www.mmvg.org/member/mengyuan_ma/">
-            <div class="small-portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/Mengyuan_Ma.jpg');"></div>
+            <div class="small-portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/Mengyuan_Ma.jpeg');"></div>
         </a>
         <div class="portrait-title">
             <h3 itemprop="name"><a href="http://www.mmvg.org/member/mengyuan_ma/">Mengyuan Ma</a></h3>
