--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                         <div class="col-xs-12 col-md-3">
         <div id="profile">
             <a href="http://www.mmvg.org/member/zutao_jiang/">
-                <div class="portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/portraits.jpg');"></div>
+                <div class="portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/Zutao_Jiang.jpeg');"></div>
             </a>
             <div class="portrait-title">
                 <h2 itemprop="name"><a href="http://www.mmvg.org/member/zutao_jiang/">Zutao Jiang</a></h2>
