--- a/member/index.html
+++ b/member/index.html
@@ -364,7 +364,7 @@
             <div class="row member-info">
     <div class="col-md-3">
         <a href="http://www.mmvg.org/member/zutao_jiang/">
-            <div class="small-portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/Zutao_Jiang.jpeg');"></div>
+            <div class="small-portrait" itemprop="image" style="background-image: url('http://www.mmvg.org//img//portraits/Zutao_Jiang.jpg');"></div>
         </a>
         <div class="portrait-title">
             <h3 itemprop="name"><a href="http://www.mmvg.org/member/zutao_jiang/">Zutao Jiang</a></h3>
