--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <div class="portrait-title">
                 <h2 itemprop="name"><a href="http://www.mmvg.org/member/xiaojun_chang/">Xiaojun Chang</a></h2>
                 
-                    <h4>Lecturer, Monash University</h4>
+                    <h4>Leader, Monash University</h4>
                 
             </div>
         </div>
