--- a/member/index.html
+++ b/member/index.html
@@ -109,7 +109,7 @@
 
     <div class="col-md-9">
         
-            <h4>Lecturer, Monash University</h4>
+            <h4>Leader, Monash University</h4>
             
         My short bio. I am Member Member.
     </div>
