--- a/member/xiaojun_chang/index.html
+++ b/member/xiaojun_chang/index.html
@@ -104,7 +104,7 @@
                 <h2 itemprop="name">Xiaojun Chang</h2>
                 <h3 itemprop="jobTitle"></h3>
                 
-                    <h4>Lecturer, Monash University</h4>
+                    <h4>Leader, Monash University</h4>
                 
             </div>
 
