--- a/funding/index.html
+++ b/funding/index.html
@@ -175,6 +175,8 @@ tibi ille nubes; muneris si silva, erat.</p>
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_CHTML">
 </script>
 
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=fTHRo9pGBiwy-WWsRswuztGmPD4U9zwxlNs48pctvKQ&cl=ffffff&w=a"></script>
+
 </body>
 </html>
 
