--- a/member/index.html
+++ b/member/index.html
@@ -111,7 +111,7 @@
         
             <h4>Leader, Monash University</h4>
             
-        My short bio. I am Member Member.
+        I am a faculty member at Faculty of Information Technology, Monash University Clayton Campus, Australia. I am also affiliated with Monash University Centre for Data Science. I am ARC Discovery Early Career Researcher Award (DECRA) Fellow between 2019-2021 (awarded in 2018).
     </div>
 
 </div>
