--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             </h1>
             
             <p class="slogan-text">
+                <font color="red">We will move to FIT official website.</font>
                 Modern Artificial Intelligence research
             </p>
             <div class="container-fluid">
